--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 // Utiles style
 @import "./utils/variables";
 @import "./utils/_visually-hidden";
+@import "./utils/_placeholder";
 
 // Base styles
 @import "./base/_base";
@@ -10,7 +11,25 @@
 
 // components
 @import "./components/_buttons";
-@import "./components/_container";
+
 
 // layout
 @import "./layout/_header";
+@import "./layout/_navbar";
+@import "./layout/_navbar-logo";
+@import "./layout/_feedback";
+@import "./layout/_hero";
+@import "./layout/_benefits";
+@import "./layout/_ability";
+@import "./layout/_ability-overlay";
+@import "./layout/_team";
+@import "./layout/_clients";
+@import "./layout/_footer";
+@import "./layout/_subscribe";
+@import "./layout/_backdrop";
+@import "./layout/_modal";
+@import "./layout/_modal-form";
+
+// Layout Portfolio
+@import "./layout/_filter";
+@import "./layout/_project-list";
