--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,6 +4,7 @@
   border-color: #ececec;
 
 &__content {
+  @extend %container;
   display: flex;
   justify-content: space-between;
   align-items: center;
